mini_lang/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT_MULTI
    COMMENT_SINGLE

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> program statement
Rule 3     statement -> type IDENTIFIER SEMICOLON
Rule 4     statement -> type IDENTIFIER EQUAL expression SEMICOLON
Rule 5     statement -> IDENTIFIER EQUAL expression SEMICOLON
Rule 6     statement -> IF LPAREN expression RPAREN LBRACE program RBRACE
Rule 7     statement -> IF LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
Rule 8     statement -> RETURN expression SEMICOLON
Rule 9     statement -> PRINT expression SEMICOLON
Rule 10    statement -> INPUT expression SEMICOLON
Rule 11    statement -> type FUNCTION IDENTIFIER LPAREN params RPAREN LBRACE program RBRACE
Rule 12    params -> <empty>
Rule 13    params -> type IDENTIFIER
Rule 14    params -> params COMMA type IDENTIFIER
Rule 15    statement -> IDENTIFIER LPAREN args RPAREN SEMICOLON
Rule 16    expression -> IDENTIFIER LPAREN args RPAREN
Rule 17    args -> <empty>
Rule 18    args -> expression
Rule 19    args -> args COMMA expression
Rule 20    expression -> expression OR expression
Rule 21    expression -> expression AND expression
Rule 22    expression -> expression GREATER expression
Rule 23    expression -> expression LESS expression
Rule 24    expression -> expression GREATEROREQUAL expression
Rule 25    expression -> expression LESSEQUAL expression
Rule 26    expression -> expression EQEQUAL expression
Rule 27    expression -> expression NEQUAL expression
Rule 28    expression -> expression PLUS expression
Rule 29    expression -> expression MINUS expression
Rule 30    expression -> expression TIMES expression
Rule 31    expression -> expression DIVIDE expression
Rule 32    expression -> NUMBER
Rule 33    expression -> STRING
Rule 34    expression -> IDENTIFIER
Rule 35    expression -> TRUE
Rule 36    expression -> FALSE
Rule 37    expression -> LPAREN expression RPAREN
Rule 38    statement -> WHILE LPAREN expression RPAREN LBRACE program RBRACE
Rule 39    type -> INT
Rule 40    type -> FLOAT
Rule 41    type -> BOOL
Rule 42    type -> STR

Terminals, with rules where they appear

AND                  : 21
BOOL                 : 41
COMMA                : 14 19
COMMENT_MULTI        : 
COMMENT_SINGLE       : 
DIVIDE               : 31
ELSE                 : 7
EQEQUAL              : 26
EQUAL                : 4 5
FALSE                : 36
FLOAT                : 40
FUNCTION             : 11
GREATER              : 22
GREATEROREQUAL       : 24
IDENTIFIER           : 3 4 5 11 13 14 15 16 34
IF                   : 6 7
INPUT                : 10
INT                  : 39
LBRACE               : 6 7 7 11 38
LESS                 : 23
LESSEQUAL            : 25
LPAREN               : 6 7 11 15 16 37 38
MINUS                : 29
NEQUAL               : 27
NUMBER               : 32
OR                   : 20
PLUS                 : 28
PRINT                : 9
RBRACE               : 6 7 7 11 38
RETURN               : 8
RPAREN               : 6 7 11 15 16 37 38
SEMICOLON            : 3 4 5 8 9 10 15
STR                  : 42
STRING               : 33
TIMES                : 30
TRUE                 : 35
WHILE                : 38
error                : 

Nonterminals, with rules where they appear

args                 : 15 16 19
expression           : 4 5 6 7 8 9 10 18 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 37 38
params               : 11 14
program              : 2 6 7 7 11 38 0
statement            : 1 2
type                 : 3 4 11 13 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . program statement
    (3) statement -> . type IDENTIFIER SEMICOLON
    (4) statement -> . type IDENTIFIER EQUAL expression SEMICOLON
    (5) statement -> . IDENTIFIER EQUAL expression SEMICOLON
    (6) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE
    (7) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
    (8) statement -> . RETURN expression SEMICOLON
    (9) statement -> . PRINT expression SEMICOLON
    (10) statement -> . INPUT expression SEMICOLON
    (11) statement -> . type FUNCTION IDENTIFIER LPAREN params RPAREN LBRACE program RBRACE
    (15) statement -> . IDENTIFIER LPAREN args RPAREN SEMICOLON
    (38) statement -> . WHILE LPAREN expression RPAREN LBRACE program RBRACE
    (39) type -> . INT
    (40) type -> . FLOAT
    (41) type -> . BOOL
    (42) type -> . STR

    IDENTIFIER      shift and go to state 4
    IF              shift and go to state 5
    RETURN          shift and go to state 6
    PRINT           shift and go to state 7
    INPUT           shift and go to state 8
    WHILE           shift and go to state 9
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    BOOL            shift and go to state 12
    STR             shift and go to state 13

    program                        shift and go to state 1
    statement                      shift and go to state 2
    type                           shift and go to state 3

state 1

    (0) S' -> program .
    (2) program -> program . statement
    (3) statement -> . type IDENTIFIER SEMICOLON
    (4) statement -> . type IDENTIFIER EQUAL expression SEMICOLON
    (5) statement -> . IDENTIFIER EQUAL expression SEMICOLON
    (6) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE
    (7) statement -> . IF LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
    (8) statement -> . RETURN expression SEMICOLON
    (9) statement -> . PRINT expression SEMICOLON
    (10) statement -> . INPUT expression SEMICOLON
    (11) statement -> . type FUNCTION IDENTIFIER LPAREN params RPAREN LBRACE program RBRACE
    (15) statement -> . IDENTIFIER LPAREN args RPAREN SEMICOLON
    (38) statement -> . WHILE LPAREN expression RPAREN LBRACE program RBRACE
    (39) type -> . INT
    (40) type -> . FLOAT
    (41) type -> . BOOL
    (42) type -> . STR

    IDENTIFIER      shift and go to state 4
    IF              shift and go to state 5
    RETURN          shift and go to state 6
    PRINT           shift and go to state 7
    INPUT           shift and go to state 8
    WHILE           shift and go to state 9
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    BOOL            shift and go to state 12
    STR             shift and go to state 13

    statement                      shift and go to state 14
    type                           shift and go to state 3

state 2

    (1) program -> statement .

    IDENTIFIER      reduce using rule 1 (program -> statement .)
    IF              reduce using rule 1 (program -> statement .)
    RETURN          reduce using rule 1 (program -> statement .)
    PRINT           reduce using rule 1 (program -> statement .)
    INPUT           reduce using rule 1 (program -> statement .)
    WHILE           reduce using rule 1 (program -> statement .)
    INT             reduce using rule 1 (program -> statement .)
    FLOAT           reduce using rule 1 (program -> statement .)
    BOOL            reduce using rule 1 (program -> statement .)
    STR             reduce using rule 1 (program -> statement .)
    $end            reduce using rule 1 (program -> statement .)
    RBRACE          reduce using rule 1 (program -> statement .)


state 3

    (3) statement -> type . IDENTIFIER SEMICOLON
    (4) statement -> type . IDENTIFIER EQUAL expression SEMICOLON
    (11) statement -> type . FUNCTION IDENTIFIER LPAREN params RPAREN LBRACE program RBRACE

    IDENTIFIER      shift and go to state 15
    FUNCTION        shift and go to state 16


state 4

    (5) statement -> IDENTIFIER . EQUAL expression SEMICOLON
    (15) statement -> IDENTIFIER . LPAREN args RPAREN SEMICOLON

    EQUAL           shift and go to state 17
    LPAREN          shift and go to state 18


state 5

    (6) statement -> IF . LPAREN expression RPAREN LBRACE program RBRACE
    (7) statement -> IF . LPAREN expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE

    LPAREN          shift and go to state 19


state 6

    (8) statement -> RETURN . expression SEMICOLON
    (16) expression -> . IDENTIFIER LPAREN args RPAREN
    (20) expression -> . expression OR expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression GREATER expression
    (23) expression -> . expression LESS expression
    (24) expression -> . expression GREATEROREQUAL expression
    (25) expression -> . expression LESSEQUAL expression
    (26) expression -> . expression EQEQUAL expression
    (27) expression -> . expression NEQUAL expression
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . NUMBER
    (33) expression -> . STRING
    (34) expression -> . IDENTIFIER
    (35) expression -> . TRUE
    (36) expression -> . FALSE
    (37) expression -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 21
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    LPAREN          shift and go to state 22

    expression                     shift and go to state 20

state 7

    (9) statement -> PRINT . expression SEMICOLON
    (16) expression -> . IDENTIFIER LPAREN args RPAREN
    (20) expression -> . expression OR expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression GREATER expression
    (23) expression -> . expression LESS expression
    (24) expression -> . expression GREATEROREQUAL expression
    (25) expression -> . expression LESSEQUAL expression
    (26) expression -> . expression EQEQUAL expression
    (27) expression -> . expression NEQUAL expression
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . NUMBER
    (33) expression -> . STRING
    (34) expression -> . IDENTIFIER
    (35) expression -> . TRUE
    (36) expression -> . FALSE
    (37) expression -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 21
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    LPAREN          shift and go to state 22

    expression                     shift and go to state 27

state 8

    (10) statement -> INPUT . expression SEMICOLON
    (16) expression -> . IDENTIFIER LPAREN args RPAREN
    (20) expression -> . expression OR expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression GREATER expression
    (23) expression -> . expression LESS expression
    (24) expression -> . expression GREATEROREQUAL expression
    (25) expression -> . expression LESSEQUAL expression
    (26) expression -> . expression EQEQUAL expression
    (27) expression -> . expression NEQUAL expression
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . NUMBER
    (33) expression -> . STRING
    (34) expression -> . IDENTIFIER
    (35) expression -> . TRUE
    (36) expression -> . FALSE
    (37) expression -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 21
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    LPAREN          shift and go to state 22

    expression                     shift and go to state 28

state 9

    (38) statement -> WHILE . LPAREN expression RPAREN LBRACE program RBRACE

    LPAREN          shift and go to state 29


state 10

    (39) type -> INT .

    IDENTIFIER      reduce using rule 39 (type -> INT .)
    FUNCTION        reduce using rule 39 (type -> INT .)


state 11

    (40) type -> FLOAT .

    IDENTIFIER      reduce using rule 40 (type -> FLOAT .)
    FUNCTION        reduce using rule 40 (type -> FLOAT .)


state 12

    (41) type -> BOOL .

    IDENTIFIER      reduce using rule 41 (type -> BOOL .)
    FUNCTION        reduce using rule 41 (type -> BOOL .)


state 13

    (42) type -> STR .

    IDENTIFIER      reduce using rule 42 (type -> STR .)
    FUNCTION        reduce using rule 42 (type -> STR .)


state 14

    (2) program -> program statement .

    IDENTIFIER      reduce using rule 2 (program -> program statement .)
    IF              reduce using rule 2 (program -> program statement .)
    RETURN          reduce using rule 2 (program -> program statement .)
    PRINT           reduce using rule 2 (program -> program statement .)
    INPUT           reduce using rule 2 (program -> program statement .)
    WHILE           reduce using rule 2 (program -> program statement .)
    INT             reduce using rule 2 (program -> program statement .)
    FLOAT           reduce using rule 2 (program -> program statement .)
    BOOL            reduce using rule 2 (program -> program statement .)
    STR             reduce using rule 2 (program -> program statement .)
    $end            reduce using rule 2 (program -> program statement .)
    RBRACE          reduce using rule 2 (program -> program statement .)


state 15

    (3) statement -> type IDENTIFIER . SEMICOLON
    (4) statement -> type IDENTIFIER . EQUAL expression SEMICOLON

    SEMICOLON       shift and go to state 30
    EQUAL           shift and go to state 31


state 16

    (11) statement -> type FUNCTION . IDENTIFIER LPAREN params RPAREN LBRACE program RBRACE

    IDENTIFIER      shift and go to state 32


state 17

    (5) statement -> IDENTIFIER EQUAL . expression SEMICOLON
    (16) expression -> . IDENTIFIER LPAREN args RPAREN
    (20) expression -> . expression OR expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression GREATER expression
    (23) expression -> . expression LESS expression
    (24) expression -> . expression GREATEROREQUAL expression
    (25) expression -> . expression LESSEQUAL expression
    (26) expression -> . expression EQEQUAL expression
    (27) expression -> . expression NEQUAL expression
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . NUMBER
    (33) expression -> . STRING
    (34) expression -> . IDENTIFIER
    (35) expression -> . TRUE
    (36) expression -> . FALSE
    (37) expression -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 21
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    LPAREN          shift and go to state 22

    expression                     shift and go to state 33

state 18

    (15) statement -> IDENTIFIER LPAREN . args RPAREN SEMICOLON
    (17) args -> .
    (18) args -> . expression
    (19) args -> . args COMMA expression
    (16) expression -> . IDENTIFIER LPAREN args RPAREN
    (20) expression -> . expression OR expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression GREATER expression
    (23) expression -> . expression LESS expression
    (24) expression -> . expression GREATEROREQUAL expression
    (25) expression -> . expression LESSEQUAL expression
    (26) expression -> . expression EQEQUAL expression
    (27) expression -> . expression NEQUAL expression
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . NUMBER
    (33) expression -> . STRING
    (34) expression -> . IDENTIFIER
    (35) expression -> . TRUE
    (36) expression -> . FALSE
    (37) expression -> . LPAREN expression RPAREN

    RPAREN          reduce using rule 17 (args -> .)
    COMMA           reduce using rule 17 (args -> .)
    IDENTIFIER      shift and go to state 21
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    LPAREN          shift and go to state 22

    args                           shift and go to state 34
    expression                     shift and go to state 35

state 19

    (6) statement -> IF LPAREN . expression RPAREN LBRACE program RBRACE
    (7) statement -> IF LPAREN . expression RPAREN LBRACE program RBRACE ELSE LBRACE program RBRACE
    (16) expression -> . IDENTIFIER LPAREN args RPAREN
    (20) expression -> . expression OR expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression GREATER expression
    (23) expression -> . expression LESS expression
    (24) expression -> . expression GREATEROREQUAL expression
    (25) expression -> . expression LESSEQUAL expression
    (26) expression -> . expression EQEQUAL expression
    (27) expression -> . expression NEQUAL expression
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . NUMBER
    (33) expression -> . STRING
    (34) expression -> . IDENTIFIER
    (35) expression -> . TRUE
    (36) expression -> . FALSE
    (37) expression -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 21
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    LPAREN          shift and go to state 22

    expression                     shift and go to state 36

state 20

    (8) statement -> RETURN expression . SEMICOLON
    (20) expression -> expression . OR expression
    (21) expression -> expression . AND expression
    (22) expression -> expression . GREATER expression
    (23) expression -> expression . LESS expression
    (24) expression -> expression . GREATEROREQUAL expression
    (25) expression -> expression . LESSEQUAL expression
    (26) expression -> expression . EQEQUAL expression
    (27) expression -> expression . NEQUAL expression
    (28) expression -> expression . PLUS expression
    (29) expression -> expression . MINUS expression
    (30) expression -> expression . TIMES expression
    (31) expression -> expression . DIVIDE expression

    SEMICOLON       shift and go to state 37
    OR              shift and go to state 38
    AND             shift and go to state 39
    GREATER         shift and go to state 40
    LESS            shift and go to state 41
    GREATEROREQUAL  shift and go to state 42
    LESSEQUAL       shift and go to state 43
    EQEQUAL         shift and go to state 44
    NEQUAL          shift and go to state 45
    PLUS            shift and go to state 46
    MINUS           shift and go to state 47
    TIMES           shift and go to state 48
    DIVIDE          shift and go to state 49


state 21

    (16) expression -> IDENTIFIER . LPAREN args RPAREN
    (34) expression -> IDENTIFIER .

    LPAREN          shift and go to state 50
    SEMICOLON       reduce using rule 34 (expression -> IDENTIFIER .)
    OR              reduce using rule 34 (expression -> IDENTIFIER .)
    AND             reduce using rule 34 (expression -> IDENTIFIER .)
    GREATER         reduce using rule 34 (expression -> IDENTIFIER .)
    LESS            reduce using rule 34 (expression -> IDENTIFIER .)
    GREATEROREQUAL  reduce using rule 34 (expression -> IDENTIFIER .)
    LESSEQUAL       reduce using rule 34 (expression -> IDENTIFIER .)
    EQEQUAL         reduce using rule 34 (expression -> IDENTIFIER .)
    NEQUAL          reduce using rule 34 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 34 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 34 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 34 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 34 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 34 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 34 (expression -> IDENTIFIER .)


state 22

    (37) expression -> LPAREN . expression RPAREN
    (16) expression -> . IDENTIFIER LPAREN args RPAREN
    (20) expression -> . expression OR expression
    (21) expression -> . expression AND expression
    (22) expression -> . expression GREATER expression
    (23) expression -> . expression LESS expression
    (24) expression -> . expression GREATEROREQUAL expression
    (25) expression -> . expression LESSEQUAL expression
    (26) expression -> . expression EQEQUAL expression
    (27) expression -> . expression NEQUAL expression
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . NUMBER
    (33) expression -> . STRING
    (34) expression -> . IDENTIFIER
    (35) expression -> . TRUE
    (36) expression -> . FALSE
    (37) expression -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 21
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26
    LPAREN          shift and go to state 22

    expression                     shift and go to state 51

state 23

    (32) expression -> NUMBER .

    SEMICOLON       reduce using rule 32 (expression -> NUMBER .)
    OR              reduce using rule 32 (expression -> NUMBER .)
    AND             reduce using rule 32 (expression -> NUMBER .)
    GREATER         reduce using rule 32 (expression -> NUMBER .)
    LESS            reduce using rule 32 (expression -> NUMBER .)
    GREATEROREQUAL  reduce using rule 32 (expression -> NUMBER .)
    LESSEQUAL       reduce using rule 32 (expression -> NUMBER .)
    EQEQUAL         reduce using rule 32 (expression -> NUMBER .)
    NEQUAL          reduce using rule 32 (expression -> NUMBER .)
    PLUS            reduce using rule 32 (expression -> NUMBER .)
    MINUS           reduce using rule 32 (expression -> NUMBER .)
    TIMES           reduce using rule 32 (expression -> NUMBER .)
    DIVIDE          reduce using rule 32 (expression -> NUMBER .)
    RPAREN          reduce using rule 32 (expression -> NUMBER .)
    COMMA           reduce using rule 32 (expression -> NUMBER .)


state 24

    (33) expression -> STRING .

    SEMICOLON       reduce using rule 33 (expression -> STRING .)
    OR              reduce using rule 33 (expression -> STRING .)
    AND             reduce using rule 33 (expression -> STRING .)
    GREATER         reduce using rule 33 (expression -> STRING .)
    LESS            reduce using rule 33 (expression -> STRING .)
    GREATEROREQUAL  reduce using rule 33 (expression -> STRING .)
    LESSEQUAL       reduce using rule 33 (expression -> STRING .)
    EQEQUAL         reduce using rule 33 (expression -> STRING .)
    NEQUAL          reduce using rule 33 (expression -> STRING .)
    PLUS            reduce using rule 33 (expression -> STRING .)
    MINUS           reduce using rule 33 (expression -> STRING .)
    TIMES           reduce using rule 33 (expression -> STRING .)
    DIVIDE          reduce using rule 33 (expression -> STRING .)
    RPAREN          reduce using rule 33 (expression -> STRING .)
    COMMA           reduce using rule 33 (expression -> STRING .)


state 25

    (35) expression -> TRUE .

    SEMICOLON       reduce using rule 35 (expression -> TRUE .)
    OR              reduce using rule 35 (expression -> TRUE .)
    AND             reduce using rule 35 (expression -> TRUE .)
    GREATER         reduce using rule 35 (expression -> TRUE .)
    LESS            reduce using rule 35 (expression -> TRUE .)
    GREATEROREQUAL  reduce using rule 35 (expression -> TRUE .)
    LESSEQUAL       reduce using rule 35 (expression -> TRUE .)
    EQEQUAL         reduce using rule 35 (expression -> TRUE .)
    NEQUAL          reduce using rule 35 (expression -> TRUE .)
    PLUS            reduce using rule 35 (expression -> TRUE .)
    MINUS           reduce using rule 35 (expression -> TRUE .)
    TIMES           reduce using rule 35 (expression -> TRUE .)
    DIVIDE          reduce using rule 35 (expression -> TRUE .)
    RPAREN          reduce using rule 35 (expression -> TRUE .)
    COMMA           reduce using rule 35 (expression -> TRUE .)


state 26

    (36) expression -> FALSE .

    SEMICOLON       reduce using rule 36 (expression -> FALSE .)
    OR              reduce using rule 36 (expression -> FALSE .)
    AND             reduce using rule 36 (expression -> FALSE .)
    GREATER         reduce using rule 36 (expression -> FALSE .)
    LESS            reduce using rule 36 (expression -> FALSE .)
    GREATEROREQUAL  reduce using rule 36 (expression -> FALSE .)
    LESSEQUAL       reduce using rule 36 (expression -> FALSE .)
    EQEQUAL         reduce using rule 36 (expression -> FALSE .)
    NEQUAL          reduce using rule 36 (expression -> FALSE .)
    PLUS            reduce using rule 36 (expression -> FALSE .)
    MINUS           reduce using rule 36 (expression -> FALSE .)
    TIMES           reduce using rule 36 (expression -> FALSE .)
    DIVIDE          reduce using rule 36 (expression -> FALSE .)
    RPAREN          reduce using rule 36 (expression -> FALSE .)
    COMMA           reduce using rule 36 (expression -> FALSE .)


state 27

    (9) statement -> PRINT expression . SEMICOLON
    (20) expression -> expression . OR expression
    (21) expression -> expression . AND expression
    (22) expression -> expression . GREATER expression
    (23) expression -> expression . LESS expression
    (24) expression -> expression . GREATEROREQUAL expression
    (25) expression -> expression . LESSEQUAL expression
    (26) expression -> expression . EQEQUAL expression
    (27) expression -> expression . NEQUAL expression
    (28) expression -> expression . PLUS expression
    (29) expression -> expression . MINUS expression
    (30) expression -> expression . TIMES expression
    (31) expression -> expression . DIVIDE expression
